# ReinaManager

./: .gitignore  CNAME  README.ja_JP.md  README.md  README.zh_CN.md  README.zh_TW.md  biome.json  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/workflows/: build.yml  page.yml
assets/: index-BUY0LPBn.css  index-D1RTH85s.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: game_monitor.rs  launch.rs  mod.rs
src/api/: bgm.ts  http.ts  vndb.ts
src/components/AddModal/: index.tsx
src/components/AlertBox/: index.tsx
src/components/Cards/: index.tsx
src/components/FilterModal/: index.tsx
src/components/LaunchModal/: index.tsx
src/components/Layout/: index.tsx
src/components/RightMenu/: index.tsx
src/components/SearchBox/: index.tsx
src/components/SortModal/: index.tsx
src/components/Toolbar/: index.tsx
src/data/: games.json
src/locales/: en_US.json  ja_JP.json  zh_CN.json  zh_TW.json
src/pages/Detail/: index.tsx
src/pages/Edit/: index.tsx
src/pages/Home/: index.tsx
src/pages/Libraries/: index.tsx
src/pages/Settings/: index.tsx
src/routes/: config.tsx  index.ts  index.tsx  navigation.ts
src/store/: gamePlayStore.ts  index.ts
src/types/: index.ts
src/utils/: database.ts  gameStats.ts  i18n.ts  index.ts  localStorage.ts  repository.ts  settingsConfig.ts
